# virtual-robot-ros

./: README.md  stack.xml
gomtec_robot_description/: CMakeLists.txt  display.launch  manifest.xml  package.xml  urdf.rviz
gomtec_robot_description/doc/: Roberta_P80_800.gv
gomtec_robot_description/meshes/collision/: RGM1603_Joint110.STL  RGM1649_Arm1.STL  RGM1656_Base.STL
gomtec_robot_description/meshes/visual/: RGM1649_Arm1.STL
gomtec_robot_description/urdf/: CameraGripper_macro.xacro  Gripper_macro.xacro  P80_800_macro.xacro  Roberta_P80_800.urdf  Roberta_P80_800.xacro  Roberta_P80_800_Vision.urdf  Roberta_P80_800_Vision.xacro
